[add] Paste and Log use number timestamp EntryDB and LogDB have been changed to expect a float instead of a string for their timestamp values, making it easier to sort pastes/logs by timestamp [fix] extra space in code blocks (#31)

--- a/src/classes/pages/assets/style.css
+++ b/src/classes/pages/assets/style.css
@@ -453,6 +453,10 @@ pre code {
     padding: 0;
 }
 
+pre code p {
+    display: none;
+}
+
 pre,
 code,
 pre code span {
